# nickle

./: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  MakeOut  Makefile  Makefile.am  Makefile.in  README  README.name  README.release  README.solaris  TODO  abort.5c  acinclude.m4  alarm.c  arc4.5c  array.c  atom.c  autoconfigure.sh  autogen.sh  avl.c  avl.h  box.c  build-rpm  builtin-bsdrandom.c  builtin-command.c  builtin-complex.c  builtin-date.c  builtin-debug.c  builtin-environ.c  builtin-file.c  builtin-foreign.c  builtin-gcd.c  builtin-math.c  builtin-namespaces.h  builtin-pid.c  builtin-process.c  (+104 more)
bench/: Makefile.am  choose.c  composite.c  ifact.c  meson.build  rfact.c  runbench.sh
builtin/: Makefile.am  bsdrandom.c  builtin.c  builtin.h  command.c  debug.c  environ.c  file.c  gcd.c  history.c  math.c  namespaces.h  semaphore.c  sockets.c  string.c  thread.c  toplevel.c
debian/: .cvsignore  changelog  control  copyright  docs  nickle.install  rules  watch
debian/tests/: upstream
debian/upstream/: signing-key.asc
doc/: meson.build
doc/tutorial/: Makefile.am  meson.build  nickle-tutorial.adoc  tutorial.sgml
doc/tutorial/advanced/: concurrency.adoc  concurrency.sgml  continuations.adoc  continuations.sgml  copying.adoc  copying.sgml  exceptions.adoc  exceptions.sgml  namespaces.adoc  namespaces.sgml
doc/tutorial/basics/: command.adoc  command.sgml  invoke.adoc  invoke.sgml
doc/tutorial/builtins/: io.adoc  io.sgml  math.adoc  math.sgml  strings.adoc  strings.sgml
doc/tutorial/intro/: expressions.adoc  expressions.sgml  functions.adoc  functions.sgml  statements.adoc  statements.sgml  variables.adoc  variables.sgml
doc/tutorial/tour/: tour.adoc  tour.sgml
examples/: Makefile.am  apsp.5c  circle.5c  circle.ic  comb.5c  comb.ic  cribbage.5c  erat.5c  fourfours.5c  google-puzzle.5c  initializer.5c  is-prime.5c  kaiser.5c  menace2.5c  meson.build  miller-rabin.5c  mplex.5c  mutextest.5c  numbers.5c  polynomial.5c  prime.5c  qbrating.5c  qbrating.ic  randtest.5c  restart.5c  rijndael.5c  roman.5c  rsa-demo.5c  rsa.5c  shortpaths.5c  skiplist.5c  skiplisttest.5c  sort.5c  sudoku.5c
examples/rsa/: numbers.ic  rsa.ic
examples/smlng/: Makefile.am  context.5c  generate.5c  meson.build  parse.5c  state.5c  test.5c
examples/turtle/: .cvsignore  Makefile.am  meson.build  snowflake.5c  snowflake.tex  turtle.5c
memleak/: Imakefile  Makefile  fmalloc.c  getretx86.c
test/: Makefile.am  README  cbrttest.5c  datetest.5c  etest.5c  exptest.5c  factorial.5c  fround.5c  gammatest.5c  gcdtest.5c  inttest.5c  jntest.5c  jsontest.5c  logtest.5c  math-bits.5c  math-funcs.bc  math-tables.sh  math.5c  meson.build  modtest.5c  optest.5c  orderofoptest.5c  rattest.5c  scanf.5c  sincostest.5c  sorttest.5c  sqrttest.5c  tantest.5c
