dnl Process this file with autoconf to produce a configure script.

dnl Copyright (C) 1988-2001 Keith Packard and Bart Massey.
dnl All Rights Reserved.  See the file COPYING in this directory
dnl for licensing information.

AC_PREREQ(2.50)

AC_INIT(nickle.h)
AM_INIT_AUTOMAKE(nickle,2.20)
AM_CONFIG_HEADER(config.h)
AC_CONFIG_AUX_DIR(.)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AM_PROG_LEX
AC_PROG_RANLIB
dnl AC_PROG_YACC
AC_CHECK_PROGS([YACC], byacc yacc bison, yacc)
case "$YACC" in
*bison)	YACC="$YACC -y"	;;
esac
AC_PROG_AWK
AC_CHECK_PROGS([DATE], date)

dnl Checks for libraries.
AC_CHECK_LIB(m, log)
AC_CHECK_LIB(nsl, gethostbyname)
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(resolv, hstrerror)		     

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h strings.h time.h sys/time.h unistd.h)
AC_CHECK_HEADERS(stropts.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
case "$ac_cv_c_inline" in
  no) ;;
  *) AC_DEFINE([HAVE_C_INLINE], 1, [C compiler has some form of inline.]) ;;
esac

dnl Checks for precise integer types
AC_CHECK_HEADERS(stdint.h)
case "$ac_cv_header_stdint_h" in
 no)
   AC_CHECK_SIZEOF([unsigned long long], 0)
   AC_CHECK_SIZEOF([unsigned long], 0)
   AC_CHECK_SIZEOF([unsigned int], 0)
   AC_CHECK_SIZEOF([unsigned short], 0)
   ;;
 yes)
   AC_MSG_CHECKING([for uint64_t])
   AC_EGREP_HEADER([uint64_t], stdint.h, 
   		    AC_MSG_RESULT(yes)
		    AC_DEFINE([HAVE_UINT64_T], 1, [Has uint64_t datatype]),
		    AC_MSG_RESULT(no))
   ;;
esac

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gettimeofday hstrerror select sigaction sigrelse sigignore)

AC_FUNC_GETPGRP

dnl The readline test is complicated enough to rate its own file
AC_LIB_READLINE

if test "x$prefix" = xNONE; then
    prefix="$ac_default_prefix"
fi

nicklelibdir=`eval echo ${datadir}`/nickle

AC_SUBST(nicklelibdir)

AC_DEFINE_UNQUOTED([NICKLELIBDIR], "$nicklelibdir", [Nickle data directory])

AC_CONFIG_FILES(
 Makefile
 builtin/Makefile
 test/Makefile
 bench/Makefile
 date-sh
 nickle.1)

AC_OUTPUT
